--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -317,9 +317,9 @@
             .col-12.col-lg-12 
                 .customers__content
                     .section__text-wrapper 
-                            h3.section__text-wrapper__subtitle Popular Dishes
-                            h1.section__text-wrapper__title Our Delicious
-                                span Foods
+                            h3.section__text-wrapper__subtitle Testimonials
+                            h1.section__text-wrapper__title Our Customers 
+                                span Reviews
                             p.section__text-wrapper__p Food is any substance consumed to provide nutritional support for an organism.
                     .customers__wrapper.has-scrollbar  
                         .customers__box 
@@ -379,31 +379,52 @@
                             .banner__wrapper
                                     .banner__img 
                                         img(src='assets/img/banner-1.jpg' alt='' class="")     
-                                    h2.banner__title Discount For Delicious Tasty Burgers!50% Off Now! Discount For Delicious Tasty Burgers!       
-                                    p.banner__text Sale off 50% only this week
-                                    .btn.btn--gallery
-                                        span order now
+                                    .banner__content    
+                                        h2.banner__title 
+                                            p 50% Off Now!
+                                            p Discount For Delicious Tasty Burgers!       
+                                        p.banner__text Sale off 50% only this week
+                                        .btn.btn--gallery
+                                            span order now
                         li.banner-sm 
                             .banner__wrapper
                                     .banner__img 
                                         img(src='assets/img/banner-2.jpg' alt='' class="")     
-                                    h2.banner__title Delicious Pizza    
-                                    p.banner__text 50% off Now
-                                    .btn.btn--gallery
-                                        span order now
+                                    .banner__content    
+                                        h2.banner__title Delicious Pizza    
+                                        p.banner__text 50% off Now
+                                        .btn.btn--gallery
+                                            span order now
                         li.banner-sm 
                             .banner__wrapper
                                     .banner__img 
                                         img(src='assets/img/banner-3.jpg' alt='' class="")     
-                                    h2.banner__title American Burgers     
-                                    p.banner__text 50% off Now
-                                    .btn.btn--gallery
-                                        span order now
+                                    .banner__content        
+                                        h2.banner__title American Burgers     
+                                        p.banner__text 50% off Now
+                                        .btn.btn--gallery
+                                            span order now
                         li.banner-md
                             .banner__wrapper
                                     .banner__img 
                                         img(src='assets/img/banner-4.jpg' alt='' class="")     
-                                    h2.banner__title Tasty Buzzed Pizza       
-                                    p.banner__text Sale off 50% only this week
-                                    .btn.btn--gallery
-                                        span order now                               
+                                    .banner__content        
+                                        h2.banner__title Tasty Buzzed Pizza       
+                                        p.banner__text Sale off 50% only this week
+                                        .btn.btn--gallery
+                                            span order now       
+
+
+//Blog Section
+
+.blog 
+    .container 
+        .row    
+            .col-12.col-lg-12
+                .blog__content  
+                      .section__text-wrapper 
+                            h3.section__text-wrapper__subtitle Testimonials
+                            h1.section__text-wrapper__title Our Customers 
+                                span Reviews
+                            p.section__text-wrapper__p Food is any substance consumed to provide nutritional support for an organism.
+                            
