--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -617,7 +617,7 @@
             max-height: 455px;
             margin: 0 auto;
 
-            object-fit: contain;
+            object-fit: cover;
 
 
             @include xl {
@@ -1407,6 +1407,7 @@
         @include md {
 
             top: 40px;
+            left: -100px;
 
 
             img {
@@ -1420,6 +1421,7 @@
         @include lg {
 
             top: 20px;
+            left: unset;
 
 
             img {
@@ -1654,7 +1656,7 @@
 
 
     &__content {
-        padding: 80px 0;
+        padding: 0px 0 40px 0;
 
 
 
@@ -1678,49 +1680,149 @@
     &__banner {
         display: grid;
         gap: 10px;
+
+
+        @include md {
+            grid-template-columns: repeat(4, 1fr);
+
+            .banner-lg {
+                grid-column: 1/3;
+                grid-row: 1/3;
+            }
+
+            .banner-md {
+                height: 220px;
+                grid-column: 3/5;
+                grid-row: 2/5;
+            }
+        }
     }
 
     .banner-lg {
         height: 430px;
+
 
     }
 
 
     .banner-md {
         height: 240px;
+
+        .banner__content {
+            left: 50%;
+
+
+
+
+
+            .banner__title {
+                font-size: 2.2rem;
+                line-height: 25px;
+            }
+        }
+
+
     }
 
 
     .banner-sm {
         height: 200px;
+
+
+        .banner__content {
+
+            max-width: 160px;
+
+
+            .banner__title {
+                font-size: 2.2rem;
+                line-height: 25px;
+
+            }
+        }
+
     }
 
+
+    .banner__wrapper {
+        position: relative;
+        height: 100%;
+        box-shadow: $shadow-2;
+        overflow: hidden;
+
+        cursor: pointer;
+
+        border: 1px solid black;
+
+
+
+
+    }
 
     .banner {
 
 
 
 
+        &__content {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            left: 20px;
+            right: 20px;
+            max-height: calc(100% - 30px);
+
+            color: $white;
+            font-family: $ff-rubik;
+
+
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+
+
+
+        }
+
+        &__title {
+            font-size: $fs-1;
+            font-weight: $fw-600;
+            line-height: 40px;
+
+
+            p {
+                &:nth-child(1) {
+                    font-size: 2.2rem;
+                }
+
+            }
+
+
+        }
+
+
+
         &__img {
-
-            position: relative;
+            width: 100%;
             height: 100%;
-            box-shadow: $shadow-2;
-            overflow: hidden;
 
-            border: 1px solid black;
 
 
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
+                transition: $transition-2;
+
 
                 background-color: $gainsboro;
-
-                object-fit: cover;
                 transform: scale(1);
 
-
+                &:hover {
+                    transform: scale(1.05);
+                    transition: $transition-2;
+                }
             }
         }
     }
