blog section finish

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -423,8 +423,63 @@
             .col-12.col-lg-12
                 .blog__content  
                       .section__text-wrapper 
-                            h3.section__text-wrapper__subtitle Testimonials
-                            h1.section__text-wrapper__title Our Customers 
-                                span Reviews
+                            h3.section__text-wrapper__subtitle Latest Blog Posts
+                            h1.section__text-wrapper__title This Is All About 
+                                span Foods
                             p.section__text-wrapper__p Food is any substance consumed to provide nutritional support for an organism.
+                .blog__article 
+                    .article__wrapper 
+                        .article__img 
+                            img(src='assets/img/blog-1.jpg' alt='' class="")   
+                            span Pizza
+                        .article__box    
+                            .article__autor 
+                                .artilce__data 
+                                        i.ri-calendar-2-line
+                                        span JAN 01 2022
+                                .article__person 
+                                        i.ri-user-fill
+                                        span JONATHAN SMITH
+                            h3.article__title What Do You Think About Cheese Pizza Recipes?
+                            p.article__text Financial experts support or help you to to find out which way you can raise your funds more...
+                            .article__read-more 
+                                span READ MORE
+                                i.ri-arrow-right-fill
+                    .article__wrapper 
+                        .article__img 
+                            img(src='assets/img/blog-2.jpg' alt='' class="")   
+                            span burger
+                        .article__box        
+                            .article__autor 
+                                .artilce__data 
+                                        i.ri-calendar-2-line
+                                        span JAN 01 2022
+                                .article__person 
+                                        i.ri-user-fill
+                                        span JONATHAN SMITH
+                            h3.article__title Making Chicken Strips With New Delicious Ingridents.
+                            p.article__text Financial experts support or help you to to find out which way you can raise your funds more...
+                            .article__read-more 
+                                span READ MORE
+                                i.ri-arrow-right-fill
+                    .article__wrapper 
+                        .article__img 
+                            img(src='assets/img/blog-3.jpg' alt='' class="")   
+                            span chicken
+                        .article__box        
+                            .article__autor 
+                                .artilce__data 
+                                        i.ri-calendar-2-line
+                                        span JAN 01 2022
+                                .article__person 
+                                        i.ri-user-fill
+                                        span JONATHAN SMITH
+                            h3.article__title Innovative Hot Chessyraw Pasta Make Creator Fact.
+                            p.article__text Financial experts support or help you to to find out which way you can raise your funds more...
+                            .article__read-more 
+                                span READ MORE
+                                i.ri-arrow-right-fill
+            
+
+
                             
