--- a/src/index.pug
+++ b/src/index.pug
@@ -3,8 +3,8 @@ html(lang="pl")
     //HEAD
     include parts/head.pug
     body
-        //HEADER
-        include parts/header.pug
+        //- //HEADER
+        //- include parts/header.pug
         //CONTENT
         include parts/content.pug       
         //FOOTER
