--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,6 +1,276 @@
 .footer {
 
     background-image: url('/assets/img/footer-illustration.png');
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    padding-bottom: 160px;
+    border-block-end: 2px solid $independence_30;
 
-    &__content {}
+    @include sm {
+        padding-bottom: 180px;
+    }
+
+
+    &::after {
+        content: url('/assets/img/delivery-boy.svg');
+        position: absolute;
+        bottom: -11px;
+        left: -160px;
+        width: 160px;
+        animation: running-cycle 20s linear infinite;
+
+
+    }
+
+    @keyframes running-cycle {
+        0% {
+            left: -160px;
+        }
+
+        100% {
+            left: 100%;
+        }
+    }
+
+
+    &__content {
+
+        padding-top: 80px;
+
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+
+
+
+        @include sm {
+            margin: 0 15px;
+
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        @include md {
+
+            margin: 0 20px;
+
+            justify-content: space-between;
+
+
+        }
+
+        @include lg {
+            margin: 0;
+
+
+        }
+
+    }
+
+    &__wrapper {
+
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+
+        padding-bottom: 10px;
+
+        @include sm {
+            width: calc(50% - 30px);
+            height: fit-content;
+        }
+
+        @include xl {
+            width: calc(25% - 30px);
+            align-self: flex-start;
+
+        }
+
+
+    }
+
+    .wrapper {
+
+
+        &__list-icon {
+            display: flex;
+            flex-direction: row;
+            gap: 5px
+        }
+
+
+        &__item {
+
+
+            a {
+                i {
+                    padding: 10px;
+                    background-color: $dark-orange;
+                    transition: $transition-1;
+                }
+
+
+                &:hover {
+
+                    transition: $transition-1;
+
+                    i {
+                        background-color: $black;
+                    }
+                }
+
+            }
+        }
+
+
+        &__title {
+            font-size: $fs-1;
+            color: $black;
+
+            font-weight: $fw-600;
+
+            span {
+                color: $dark-orange;
+            }
+        }
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            max-width: 200px;
+        }
+
+
+        &__subtitle {
+            color: $black;
+            font-weight: $fw-600;
+
+            position: relative;
+            width: fit-content;
+
+            font-size: $fs-3;
+
+            &::after {
+                position: absolute;
+                content: '';
+                background-color: $dark-orange;
+                width: 40px;
+                height: 4px;
+                left: calc(100% + 15px);
+                transform: translateY(-50%);
+                top: 50%;
+            }
+
+            &::before {
+                position: absolute;
+                content: '';
+                background-color: $dark-orange;
+                width: 6px;
+                height: 4px;
+                left: calc(100% + 55px);
+                transform: translateY(-50%);
+                top: 50%;
+
+                margin-left: 5px;
+            }
+        }
+
+
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        background-color: $white;
+        padding: 30px;
+        border: 1px solid $cultured;
+        box-shadow: $shadow-2;
+
+
+
+
+        p {
+            margin-bottom: 20px;
+        }
+
+
+        .input-wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+
+        .input-wrapper__top,
+        .input-wrapper__bottom {
+
+            @include sm {
+                gap: 20px;
+            }
+
+            @include md {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+            }
+        }
+
+
+
+        .input-field {
+            color: $spanish-gray;
+            font-size: $fs-4;
+            border: 1px solid $cultured;
+            margin-bottom: 16px;
+
+            width: 100%;
+
+
+
+
+        }
+
+        input {
+            padding: 8px;
+            color: $spanish-gray;
+            width: 100%;
+
+
+        }
+
+        textarea {
+            min-height: 50px;
+            max-height: 150px;
+            height: 100px;
+            resize: none;
+            width: 100%;
+            margin-bottom: 20px;
+
+
+
+        }
+
+
+
+    }
+
+}
+
+
+
+.footer-bottom {
+    padding: 25px;
+    text-align: center;
+
+    font-weight: $fw-600;
+    color: $black;
+
+    span {
+        color: $dark-orange;
+    }
 }
