--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,7 +7,7 @@ html {
     font-size: 10px;
     scroll-behavior: smooth;
     width: 100%;
-    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body {
@@ -17,6 +17,8 @@ body {
     line-height: 1.6;
     overflow-x: hidden;
     box-sizing: border-box;
+
+    overflow-y: scroll;
 
 
 }
