--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -86,7 +86,7 @@
                                     img(src="assets/img/promo-5.png", alt="")                
 //About
 
-.about      
+.about#about      
     .container 
         .row 
             .col-12.col-lg-12 
@@ -121,7 +121,7 @@
 
 //Dishes Section
 
-.dishes 
+.dishes#food-menu 
     .container 
         .row 
             .col-12.col-lg-12 
@@ -417,7 +417,7 @@
 
 //Blog Section
 
-.blog 
+.blog#blog 
     .container 
         .row    
             .col-12.col-lg-12
