--- a/src/parts/footer.pug
+++ b/src/parts/footer.pug
@@ -1,6 +1,6 @@
 //Footer
 
-footer.footer 
+footer.footer#footer 
     .container 
         .row 
             .col-12.col-lg-12 
@@ -59,7 +59,11 @@ footer.footer
 
 
 
+//Bact to top
 
+.back-btn 
+    a(href="#top" class="back-top-btn" arial-label="Back to top" data-back-top-btn) 
+         i.ri-arrow-up-circle-fill
 
 
 
