--- a/src/parts/header.pug
+++ b/src/parts/header.pug
@@ -3,21 +3,21 @@ header.header(data-header='')
         .row
             .header__content
                 .header__logo 
-                        a(href="index.html") 
+                        a(href="#") 
                             .logo__title Foodie 
                             span .
                 .menu(data-navbar='')
                     .menu__list
                         .menu__item 
-                            a(href="#home" data-nav-link="") Home
+                            a(href="#" data-nav-link="") Home
                         .menu__item 
                             a(href="#about" data-nav-link="") About Us
                         .menu__item 
-                            a(href="$food-menu" data-nav-link="") Shop
+                            a(href="#food-menu" data-nav-link="") Shop
                         .menu__item 
                             a(href="#blog" data-nav-link="") Blog
                         .menu__item 
-                            a(href="#" data-nav-link="") Contact Us    
+                            a(href="#footer" data-nav-link="") Contact Us    
                 .header__btn-group
                         .search-btn(arial-lebel="Search" data-search-btn='')
                             i.icon__search.ri-search-line      
