--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="pl")
     //HEAD
     include parts/head.pug
-    body
+    body#top
         //HEADER
         include parts/header.pug
         //CONTENT
