--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -551,7 +551,7 @@
 
         display: flex;
         flex-direction: column;
-        padding: 80px 0;
+        padding: 120px 0;
 
 
 
@@ -791,7 +791,7 @@
 
         display: flex;
         flex-direction: column;
-        padding: 80px 0;
+        padding: 120px 0;
 
 
 
@@ -1552,6 +1552,15 @@
     .section__text-wrapper {
         margin-bottom: 40px;
 
+        &__title {
+
+            @include md {
+                max-width: 400px;
+            }
+        }
+
+
+
 
     }
 
@@ -1832,7 +1841,7 @@
                 transform: scale(1);
 
                 &:hover {
-                    transform: scale(1.05);
+                    transform: scale(1.1);
                     transition: $transition-2;
                 }
             }
@@ -1852,7 +1861,7 @@
 
     &__content {
 
-        padding: 80px 0;
+        padding: 120px 0;
 
 
         @include sm {
@@ -1958,7 +1967,7 @@
 
         &__img {
             position: relative;
-
+            cursor: pointer;
             aspect-ratio: 1 /0.65;
 
 
@@ -2050,6 +2059,9 @@
             align-items: center;
             gap: 10px;
             color: $black;
+
+            width: fit-content;
+            cursor: pointer;
 
 
             span {
