--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,6 +8,8 @@
     padding-bottom: 160px;
     border-block-end: 2px solid $independence_30;
 
+    padding-top: 60px;
+
     @include sm {
         padding-bottom: 180px;
     }
@@ -56,7 +58,8 @@
 
             margin: 0 20px;
 
-            justify-content: space-between;
+
+
 
 
         }
@@ -65,6 +68,12 @@
             margin: 0;
 
 
+
+
+        }
+
+        @include xl {
+            gap: 10px;
         }
 
     }
@@ -87,7 +96,10 @@
             width: calc(25% - 30px);
             align-self: flex-start;
 
+
         }
+
+
 
 
     }
@@ -99,6 +111,14 @@
             display: flex;
             flex-direction: row;
             gap: 5px
+        }
+
+        &__p {
+
+            @include md {
+                max-width: 220px;
+            }
+
         }
 
 
@@ -191,6 +211,8 @@
         border: 1px solid $cultured;
         box-shadow: $shadow-2;
 
+        min-width: 360px;
+
 
 
 
@@ -273,4 +295,28 @@
     span {
         color: $dark-orange;
     }
+}
+
+
+//bact to top
+
+.back-btn {
+
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    z-index: 2;
+
+
+    a {
+
+        i {
+            transition: $transition-1;
+            color: $dark-orange;
+            font-size: 48px;
+        }
+
+    }
+
+
 }
