--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1522,9 +1522,6 @@
         padding: 80px 0;
 
 
-
-
-
         @include sm {
             margin: 0 15px;
         }
@@ -1605,13 +1602,14 @@
 
 
 
-
         &__image {
 
-            min-width: max-content;
+            // min-width: max-content;
 
-            width: 80px;
-            height: 80px;
+            max-width: 80px;
+            max-height: 80px;
+
+            border-radius: 50px;
 
 
 
@@ -1619,7 +1617,8 @@
             img {
                 width: 100%;
                 height: 100%;
-                border-radius: 50px;
+                object-fit: cover;
+
             }
         }
 
